hphp/test/zend/good/ext/standard/tests/file/touch_basic.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (getenv("SKIP_SLOW_TESTS")) die("skip slow test");
if (substr(PHP_OS, 0, 3) == 'WIN') {
    die('skip.. only for Non Windows');
}
}
