hphp/test/zend/bad/ext/standard/tests/file/fopen_variation10-win32.php.skipif
<?php
if(substr(PHP_OS, 0, 3) != "WIN")
  die("skip Run only on Windows");

if (!is_writable('c:\\fopen_variation10.tmp')) {
	die('skip. C:\\ not writable.');
}

?>